use official Tomcat Docker image